unpackaged/main/default/objects/TEM_Version__c/TEM_Version__c.object-meta.xml
<CustomObject>
    <label>TEM Version</label>
    <nameField>
        <displayFormat>VERSION-{000}</displayFormat>
        <label>Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TEM Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>