unpackaged/main/default/objects/TEM_Version__c/fields/Clone_Process_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Clone_Process_Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clone Process Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TEM_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>