unpackaged/main/default/objects/TEM_Version__c/fields/Cloning_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloning_Process_Status__c</fullName>
    <label>Cloning Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Completed - Error Occurred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>