unpackaged/main/default/objects/TEM_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Cloning_Process_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>